--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,40 @@
-.navbar-lewagon {
+nav > ul{
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  background: white;
+  flex-direction: row;
+  padding: 20px;
+  list-style: none;
+  margin: 0px 50px;
+
+
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.logo {
+  background-color: #FA58B6;
+  padding: 25px;
+  border-radius: 50%;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.btn {
+  padding: 5px 15px;
+  border-radius: 4px;
+}
+
+.nav-connexion {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btn-sign-up {
+  color: white;
+  background-color: #FA58B6;
+  margin-right: 10px;
+
+}
+
+.btn-sign-in {
+  background-color: #7A0BC0;
+  color: white;
 }
