--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,29 @@
   </head>
 
   <body>
+
+    <nav>
+      <ul>
+      <li>
+        <div class="logo"></div>
+      </li>
+      <div class="nav-connexion">
+        <li>
+        <%= link_to "Sign up", "sign_up_path", class: "btn btn-sign-up"%>
+      </li>
+      <li>
+        <%= link_to "Sign in", "user_path", class: "btn btn-sign-in" %>
+      </li>
+      </div>
+
+      </ul>
+    </nav>
+
     <%= yield %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+
+
+
   </body>
 </html>
