--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
       </li>
       <div class="nav-connexion">
         <li>
-        <%= link_to "Sign up", "sign_up_path", class: "btn btn-sign-up"%>
+        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-sign-up"%>
       </li>
       <li>
-        <%= link_to "Sign in", "user_path", class: "btn btn-sign-in" %>
+        <%= link_to "Sign in", new_user_session_path, class: "btn btn-sign-in" %>
       </li>
       </div>
 
