--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,12 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
+$blue: #270082;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$pink: #FA58B6;
+$purple: #7A0BC0;
+$dark-blue: #1A1A40;
