--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,23 @@
 
   <body>
     <%= yield %>
+
+    <footer>
+      <div class="footer-description">
+        <p>Wagon Party is the first-in-class entertainment company to organize wild parties</p>
+        <div class="footer-links">
+          <a href=""><i class="fab fa-facebook"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="footer-information">
+        <a href="">About us</a>
+        <a href="">Contact us</a>
+        <a href="">Community</a>
+        <a href="">FAQs</a>
+      </div>
+    </footer>
+
   </body>
 </html>
