Create banner & fixed some style issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
 
-    <nav>
+    <nav class="navbar fixed-top" data-controller="navbar" data-action="scroll@window->navbar#updateNavbar">
       <ul>
       <li>
         <div class="logo"></div>
