--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,12 @@
+nav {
+  background-color: transparent;
+  transition: 0.5s background-color ease;
+}
+
+.navbar-white {
+  background-color: white;
+
+}
 nav > ul{
   display: flex;
   align-items: center;
@@ -6,7 +15,7 @@ nav > ul{
   padding: 20px;
   list-style: none;
   margin: 0px 50px;
-
+  width: 100%;
 
 }
 
