--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
 <%# Landing page %>
+<div class="banner-landing">
+  <h1 class="banner-h1">Welcome to the Wagon Party</h1>
+</div>
+
+<div class="test"></div>
