--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <%# Landing page %>
+
+<%= button_to "logout", destroy_user_session_path, method: :delete  %>
+
 <div class="banner-landing">
   <h1 class="banner-h1">Welcome to the Wagon Party</h1>
 </div>
