--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,4 +4,30 @@
   <h1 class="banner-h1">Welcome to the Wagon Party</h1>
 </div>
 
-<div class="test"></div>
+
+<div class="card-container">
+  <div class="card" style="width: 20rem;">
+    <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" class="card-img-top" alt="Wagon Picture">
+    <div class="card-body">
+      <h5 class="card-title"> <strong>Wagon name</strong></h5>
+      <p class="card-text">Some quick description on how to have an amazing rave in this wagon.</p>
+      <a href="#" class="btn btn-success"> Get the rave going</a>
+    </div>
+  </div>
+  <div class="card" style="width: 20rem;">
+    <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" class="card-img-top" alt="Wagon Picture">
+    <div class="card-body">
+      <h5 class="card-title"> <strong>Wagon name</strong></h5>
+      <p class="card-text">Some quick description on how to have an amazing rave in this wagon.</p>
+      <a href="#" class="btn btn-success"> Get the rave going</a>
+    </div>
+  </div>
+  <div class="card" style="width: 20rem;">
+    <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" class="card-img-top" alt="Wagon Picture">
+    <div class="card-body">
+      <h5 class="card-title"> <strong>Wagon name</strong></h5>
+      <p class="card-text">Some quick description on how to have an amazing rave in this wagon.</p>
+      <a href="#" class="btn btn-success"> Get the rave going</a>
+    </div>
+  </div>
+</div>
