--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,12 +6,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   background-size: cover;
+
 
  > h1 {
     font-weight: 700;
     font-size: 3rem;
     color: #fff;
+    margin-bottom: 20px;
     text-shadow:
     0 0 7px #fff,
     0 0 10px #fff,
@@ -24,7 +27,33 @@
     animation: flicker 2s infinite alternate;
     color: #fff;
   }
+
+  > .banner-form {
+    padding: 10px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    border: 0;
+    border-radius: 4px;
+
+    > input {
+      border: 0;
+      padding: 10px;
+    }
+    > input:focus-visible {
+      outline: none;
+    }
+
+    > .btn-submit {
+      padding: 10px 10px;
+      border-radius: 4px;
+      color: white;
+      background-color: #7A0BC0;
+    }
+  }
 }
+
 
 /* Flickering animation */
 @keyframes flicker {
