--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,11 @@
 // Your CSS components
 @import "components/_navbar";
 @import "components/_banner";
+
+
+
+// Adding some generic style
+
+.container {
+  margin-top: 100px;
+}
