--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,4 +8,5 @@
     <%= f.input :end_location %>
     <%= f.submit "Add booking", class: "btn btn-primary" %>
   <% end %>
+  <%= link_to "Back", root_path %>
 </div>
