--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,9 +27,11 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
     </div>
   <% end %>
+  <%= render "devise/shared/links" %>
+  <%= link_to "Back", root_path %>
+
 </div>
 
-<%= render "devise/shared/links" %>
