Fixing sign up style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
           <li>
             <%= link_to "Sign in", new_user_session_path, class: "btn btn-sign-in" %>
           </li>
-          <li>
-            <%= button_to "logout", destroy_user_session_path, method: :delete %>
-          </li>
+          <%# <li>
+            <%= button_to "logout", destroy_user_session_path, method: :delete
+          </li> %>
         </div>
       </ul>
     </nav>
