--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     <input type="text" placeholder="End Location">
     <input type="date" placeholder="Check in">
     <input type="date" placeholder="Check Out">
-    <input type="submit" class="btn-submit" value="Let's Go">
+    <%=link_to "Let's Go!", wagons_path, class:"btn-submit"%>
   </form>
 </div>
 
