wagons-results-cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 // Your CSS components
 @import "components/_navbar";
 @import "components/_banner";
-
+@import "components/_wagon-result";
 
 
 // Adding some generic style
