show wagons, added background image + card details and description

--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -1,1 +1,28 @@
-<h1><%= @wagon.name %></h1>
+<div>
+  <div class="background-image-blurred">
+  </div>
+  <div class="container">
+      <div class="card-product">
+        <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"/>
+        <div class="card-product-infos">
+          <h2>Wagon <%= @wagon.name %></h2>
+          <p>Join the rave</p>
+          <p>xxx€</p>
+          <p>05/03/22 </p>
+          <%= link_to "BOOK NOW !", "", :class => "btn btn-success rounded" %>
+        </div>
+      </div>
+      <div class="card-product">
+        <div class="card-description">
+          <h2>A propos de ce Wagon </p>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <div class="card-product-infos">
+          <p>Departure from <strong>Paris</strong>.</p>
+          <p>Gare de Lyon, Samedi 05 Mars, 20h</p>
+          <p>Direction Marseille !</p>
+          <p>Contact : XXX</p>
+        </div>
+      </div>
+  </div>
+</div>
