--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,7 +27,8 @@ nav > ul{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 8%;
+  width: 10%;
+
 }
 
 .btn-nav-connexion {
@@ -38,6 +39,10 @@ nav > ul{
   text-decoration: none;
 }
 
+.navbar-white {
+  background-color: black;
+
+}
 
 // Button hover
 
@@ -75,18 +80,3 @@ color: white;
 }
 
 // End hover
-
-
-.navbar-white {
-  background-color: white;
-
-  > .btn-nav-connexion {
-    color: #000;
-  }
-
-  > .logo {
-    color: #000;
-    border-color: #000;
-  }
-
-}
