--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -2,6 +2,7 @@
   <div class="background-image-blurred">
   </div>
   <div class="container">
+    <div class="margin">
       <div class="card-product">
         <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"/>
         <div class="card-product-infos">
@@ -24,5 +25,6 @@
           <p>Contact : XXX</p>
         </div>
       </div>
+    </div>
   </div>
 </div>
