--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "components/_navbar";
 @import "components/_banner";
 @import "components/_wagon-result";
+@import "components/_card-user-show";
 
 
 // Adding some generic style
