Change the video

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <%# Landing page %>
 <div class="banner-landing">
-  <%= video_tag "pexel-video-test", autoplay: :autoplay, loop: :loop, muted: :muted, class: "banner-video" %>
+  <%= video_tag "video-banner", autoplay: :autoplay, loop: :loop, muted: :muted, class: "banner-video" %>
   <h1 class="banner-h1">Welcome to the Wagon Party</h1>
   <form action="#" class="banner-form">
     <input type="text" placeholder="Start Location">
