add link to booking

--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -10,7 +10,7 @@
           <p>Join the rave</p>
           <p>xxx€</p>
           <p>05/03/22 </p>
-          <%= link_to "BOOK NOW !", "", :class => "btn btn-success rounded" %>
+          <%= link_to "BOOK NOW !", new_wagon_booking_path(@wagon), :class => "btn btn-success rounded" %>
         </div>
       </div>
       <div class="card-product">
