--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -7,7 +7,7 @@
 }
 
 .background-image-blurred {
-  background-image: url("https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
+  background-image: url("https://images.ctfassets.net/r1xeyn8lz4i6/43cKUckljj4lTcSUrK6FyC/a5840a7931af523e5f161e415a1af41b/201_by_night_inside.jpg?w=1920");
   filter: blur(8px);
   height: 400px;
   position: absolute;
@@ -53,13 +53,14 @@
 }
 
 .card-description {
-  max-width: 500px;
-  margin-left: 8px;
+  width: 500px;
+  padding-left: 40px;
 }
 
 .date-list {
   list-style: none;
-  width: 100%
+  width: 100%;
+  margin-right: 40px;
 }
 
 .card-booking {
@@ -70,5 +71,5 @@
   padding: 15px;
   border-radius: 4px;
   margin-bottom: 30px;
-  width: 80%
+  width: 100%;
 }
