--- a/app/views/wagons/new.html.erb
+++ b/app/views/wagons/new.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :capacity %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit "Add wagon", class: "btn btn-primary" %>
   <% end %>
 </div>
