Changed color text and components location

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,12 +13,6 @@
 @import "pages/index";
 @import "pages/signin";
 
-// Your CSS components
-@import "components/_navbar";
-@import "components/_banner";
-@import "components/_wagon-result";
-@import "components/_card-user-show";
-
 
 // Adding some generic style
 
@@ -31,6 +25,6 @@ a:hover {
 }
 
 body {
-  color: white;
+  color: black;
   background-color: black;
 }
