--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "navbar";
 @import "footer";
 @import "card";
+@import "navbar";
+@import "banner";
+@import "wagon-result";
+@import "card-user-show";
