--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -26,7 +26,7 @@
       </div>
         <div class="card-product">
           <ul class="date-list">
-            <% @wagon.available_dates.each do |date|%>
+            <% @wagon.dates.each do |date|%>
               <div class="card-booking">
                 <div class="card-booking-description">
                   <li><h2> <%= date %> </h2>
