--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
 @import "pages/index";
 @import "pages/signin";
 
+
+// Map box style
+@import "mapbox-gl/dist/mapbox-gl";
+
 // Adding some generic style
 
 .container {
