--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,9 @@
 
 // Adding some generic style
 
+body {
+  background-color: black;
+}
 .container {
   margin-top: 100px;
   background-color: white;
