--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -44,7 +44,7 @@
                       </div>
                       <div class="modal-body">
                         <p>Your booking for <%=@wagon.name%> on the <%=date%> from <%@wagon.location %> </p>
-                        <p>Do you wish to continue?</p>
+                        <p>All is good ?</p>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
