add picture to wagon - working

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -30,6 +30,14 @@
   object-fit: cover;
 }
 
+.card-img-top-result > img {
+  height: 100%;
+  width: 180px;
+  border-radius: 4px;
+  object-fit: contain;
+  margin-left: 8px
+}
+
 .card-product h2 {
   font-size: 16px;
   font-weight: bold;
