--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -4,7 +4,13 @@
   <div class="container">
     <div class="margin">
       <div class="card-product">
-        <img class='rounded' src="https://images.ctfassets.net/r1xeyn8lz4i6/43cKUckljj4lTcSUrK6FyC/a5840a7931af523e5f161e415a1af41b/201_by_night_inside.jpg?w=1920"/>
+        <div class="rounded">
+          <% if @wagon.photo.key %>
+            <%= cl_image_tag @wagon.photo.key, crop: :fill %>
+          <% else %>
+            <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"/>
+          <% end %>
+        </div>
         <div class="card-product-infos">
           <h2>Wagon <%= @wagon.name %></h2>
           <p>Join the rave</p>
