add location to wagons fomr - goecoding commented

--- a/app/views/wagons/new.html.erb
+++ b/app/views/wagons/new.html.erb
@@ -5,6 +5,8 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :capacity %>
+    <%= f.input :location %>
+    <%= f.input :dates %>
     <%= f.submit "Add wagon", class: "btn btn-primary" %>
   <% end %>
 </div>
