styling booking card

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,8 @@ body {
 }
 .container {
   margin-top: 100px;
-  background-color: white;
+  background-color: #e5e5e5;
+  padding: 20px;
 }
 
 a:hover {
