--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,15 @@
   <h1 class='border-bottom'><%= "Welcome #{@user.first_name}" %></h1>
 
   <h2>Your bookings</h2>
-  <% @user.bookings.each do |booking|%>
-  <li><%= "📅 #{booking.start_date}: From #{booking.start_location} 🚃" %></li>
-  <% end %>
+  <div class="booking-cards">
+    <% @user.bookings.each do |booking|%>
+      <ul class="booking-card">
+        <li><%= "📅 Date : #{booking.start_date}" %></li>
+        <li><%= "🚃 From : #{booking.start_location}" %></li>
+      </ul>
+    <% end %>
+  </div>
+
 
   <div class="wagons-header d-flex align-items-center mb-3">
     <h2 class='m-0'>Your wagons</h2>
@@ -12,10 +18,11 @@
         <%= link_to "New wagon", new_user_wagon_path(@user), class:'btn btn-success m-0 ms-3' %>
       <% end %>
   </div>
+  <div class="booking-cards">
     <% @wagons.each do |wagon| %>
       <div class="card-user-show d-flex border bg-light">
         <img src="https://images.unsplash.com/photo-1603092700399-2da0c724075c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="">
-        <div class="card-user-details ms-4">
+        <div class="booking-card">
           <h4 class="m-0"> <%= wagon.name %></h4>
           <p class="m-0"> <%= wagon.description %></p>
           <% if policy(wagon).edit? %>
@@ -24,4 +31,5 @@
         </div>
       </div>
     <% end %>
+  </div>
 </div>
