--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,3 +23,22 @@ margin: 50px 50px 50px 0;
 .card-text {
   height: 60px;
 }
+
+.booking-cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 50px 0px;
+
+  > .booking-card {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 40px 80px;
+    box-shadow: 0px 2px 2px grey;
+    list-style: none;
+    border-radius: 4px;
+  }
+}
