--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -42,3 +42,10 @@ margin: 50px 50px 50px 0;
     border-radius: 4px;
   }
 }
+
+
+.wagon-result {
+  border-radius: 4px;
+  background-color: #323232;
+  border: 0;
+}
