--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,11 +24,12 @@
 
 body {
   background-color: black;
+  color: white;
 }
 .container {
   margin-top: 100px;
-  background-color: #e5e5e5;
   padding: 20px;
+  color: white;
 }
 
 a:hover {
