--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 .banner-landing {
-  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  // background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,17 +8,17 @@
   height: 100vh;
 
 
-  // >.banner-video {
-  //   width: 100%;
-  //   height: 100vh;
-  //   position: absolute;
-  //   display: flex;
-  //   justify-content: center;
-  //   object-fit: cover;
-  //   top: 0;
-  //   z-index: -2;
+  >.banner-video {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    object-fit: cover;
+    top: 0;
+    z-index: -2;
 
-  // }
+  }
 
  > h1 {
     font-weight: 700;
@@ -39,7 +39,6 @@
   }
 
   > .banner-form {
-    padding: 10px 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -54,25 +53,22 @@
     > input:focus-visible {
       outline: none;
     }
-
-    > .btn-submit {
-      padding: 10px 10px;
-      border-radius: 4px;
+    .btn-submit {
       color: white;
-      background-color: #7A0BC0;
-      border: 1px solid white;
       text-decoration: none;
-
+      background-color: #7A0BC0;
+      padding: 20px;
+      border-radius: 0px 4px 4px 0px;
+      opacity: 1;
     }
 
-    > .btn-submit:hover {
-      color:  #7A0BC0;
-      background-color: white;
-      border: 1px solid #7A0BC0;
+    .btn-submit:hover {
+      opacity: 0.7;
     }
+
+
   }
 }
-
 
 /* Flickering animation */
 @keyframes flicker {
