--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -18,7 +18,7 @@
 .card-product {
   overflow: hidden;
   height: 300px;
-  background: white;
+  background: black;
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
@@ -80,4 +80,9 @@
   border-radius: 4px;
   margin-bottom: 30px;
   width: 100%;
+}
+
+
+.modal-content {
+  color: black;
 }
