--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,11 @@
   <h2>Your bookings (<%= @user.bookings.count %>)</h2>
   <div class="booking-cards">
     <% @user.bookings.each do |booking|%>
-      <div class="booking-card text-dark">
+      <div class="booking-card bg-black">
         <h4>Booking n° <%= booking.id %></h4>
         <li><%= "📅 Date : #{booking.start_date}" %></li>
         <li><%= "🚃 From : #{booking.start_location}" %></li>
+        <li><%= link_to "Cancel my booking", user_booking_path(@user), method: :delete, data: {confirm: 'Are you sure?'}, class:'btn btn-success m-0 ms-3' %></li>
       </div>
     <% end %>
   </div>
