--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -22,20 +22,9 @@
 
  > h1 {
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 4rem;
     color: #fff;
     margin-bottom: 50px;
-    text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px #FF0094,
-    0 0 82px #FF0094,
-    0 0 92px #FF0094,
-    0 0 102px #FF0094,
-    0 0 151px #FF0094;
-    animation: flicker 2s infinite alternate;
-    color: #fff;
   }
 
   > .banner-form {
@@ -45,6 +34,8 @@
     background-color: #fff;
     border: 0;
     border-radius: 4px;
+    padding: 0px 0px 0px 20px;
+
 
     > input {
       border: 0;
@@ -56,7 +47,7 @@
     .btn-submit {
       color: white;
       text-decoration: none;
-      background-color: #7A0BC0;
+      background-color: $pink;
       padding: 20px;
       border-radius: 0px 4px 4px 0px;
       opacity: 1;
@@ -69,7 +60,19 @@
 
   }
 }
-
+.home-h2 {
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #FF0094,
+    0 0 82px #FF0094,
+    0 0 92px #FF0094,
+    0 0 102px #FF0094,
+    0 0 151px #FF0094;
+    animation: flicker 2s infinite alternate;
+    color: #fff;
+}
 /* Flickering animation */
 @keyframes flicker {
 
@@ -90,9 +93,4 @@
   20%, 24%, 55% {
       text-shadow: none;
   }
-}
-
-
-.test {
-  height: 900px;
 }
