--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,27 +1,29 @@
-.card-container {
+.home-card-container {
 display: flex;
 justify-content: space-between;
-margin: 50px 50px 50px 0;
+margin: 50px 0px 50px 0;
 }
-.card {
+.home-card {
   color: white;
-  background-color: #7A0BC0;
+  background-color: $pink;
   border-radius: 8px;
   border: 0px;
   text-align: center;
 }
 
-.card .btn {
+.home-card .btn {
   color: $pink;
   opacity:0.8;
 }
 
-.card .btn:hover {
+.home-card .btn:hover {
   opacity: 1;
 }
 
-.card-text {
-  height: 60px;
+.home-card-text {
+  height: 80px;
+  --max-lines: 2;
+  overflow: hidden;
 }
 
 .booking-cards {
@@ -48,4 +50,31 @@ margin: 50px 50px 50px 0;
   border-radius: 4px;
   background-color: #323232;
   border: 0;
+}
+
+
+// Media queries
+
+@media(max-width: 992px) {
+
+}
+
+@media(max-width: 768px) {
+
+}
+
+@media(max-width: 480px) {
+
+  .home-h2 {
+    text-align: center;
+  }
+
+  .home-card-container {
+    flex-direction: column;
+  }
+
+  .home-card {
+    margin: 20px 0;
+  }
+
 }
