--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <%# Home page %>
+
 <div class="banner-landing">
-  <%# <%= video_tag "pexel-video-test", autoplay: :autoplay, loop: :loop, muted: :muted, class: "banner-video" %>
+  <%= video_tag "pexel-video-test", autoplay: :autoplay, loop: :loop, muted: :muted, class: "banner-video" %>
   <h1 class="banner-h1">Welcome to the Wagon Party</h1>
   <form action="#" class="banner-form">
     <input type="text" placeholder="Start Location">
@@ -10,7 +11,7 @@
 </div>
 
 <div class="container">
-  <h2>Our wagons, your rules 🚃</h2>
+  <h2 class="home-h2 mb-3">Our wagons, your rules 🚃</h2>
 </div>
 <div class="home-features">
   <div class="feature-card feature-card-1">
@@ -56,15 +57,15 @@
   </div>
 
 <div class="container">
-  <h2 style='font-weight: bold'>Our top recommendations 🕺</h2>
-  <div class="card-container">
+  <h2 class="home-h2 mb-3">Our top recommendations 🕺</h2>
+  <div class="home-card-container">
     <% @wagons = Wagon.all.sample(3) %>
     <% @wagons.each do |wagon|%>
-      <div class="card" style="width: 20rem;">
+      <div class="home-card" style="width: 20rem;">
         <img src="https://images.unsplash.com/photo-1566737236500-c8ac43014a67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" class="card-img-top" alt="Wagon Picture">
-        <div class="card-body">
-          <h5 class="card-title"> <strong><%= wagon.name %></strong></h5>
-          <p class="card-text"><%= wagon.description %></p>
+          <div class="card-body">
+          <h5 class="home-card-title"> <strong><%= wagon.name %></strong></h5>
+          <p class="home-card-text"><%= wagon.description %></p>
           <p> <%= link_to "Get the rave going", wagon_path(wagon), class: "btn btn-info" %></a>
         </div>
       </div>
