last version of the user show

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -81,8 +81,8 @@ margin: 50px 0px 50px 0;
   border-radius: 4px;
   text-decoration: none;
   position: absolute;
-  bottom: 0;
-  margin-bottom: 10px;
+  bottom: 10px;
+  right: 10px;
 }
 
 .wagon-links:hover {
