--- a/app/views/wagons/index.html.erb
+++ b/app/views/wagons/index.html.erb
@@ -6,13 +6,13 @@
     <div class="wagons-card flex-row" style="width: 50%">
 
       <% @wagons.each do |wagon| %>
-        <div class="wagon-result border d-flex justify-content-center p-3 mb-2">
+        <div class="wagon-result border d-flex justify-content-center align-items-center p-1 mb-2">
 
           <div class="card-img-top-result rounded">
             <% if wagon.photo.key %>
-                <%= cl_image_tag wagon.photo.key, crop: :fill %>
+                <%= cl_image_tag wagon.photo.key, crop: :fill, style:'height: 150px; width: 150px; object-fit:cover; border-radius: 4px' %>
               <% else %>
-                <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"/>
+                <img src="https://images.unsplash.com/photo-1599766431396-2405fdfcf5e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80", style='height: 150px; width: 150px; object-fit:cover; border-radius: 4px'/>
               <% end %>
           </div>
 
