--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -40,6 +40,7 @@
     > input {
       border: 0;
       padding: 10px;
+      margin-right: 60px
     }
     > input:focus-visible {
       outline: none;
